refactor: remove endpoints not used
